# shikacracker

./: .clang-format  .gitignore  CMakeLists.txt  README.md  performance.md
frequencies/: character_frequencies.py
src/: charset.cpp  charset.hpp  charsets.cpp  charsets.hpp  concurrent_hash_map.hpp  concurrent_set.hpp  dict_attack.cpp  dict_attack.hpp  entry_buffer.hpp  flags.hpp  globals.hpp  hash.cpp  hash.hpp  hash_map.hpp  help.cpp  helpers.cpp  helpers.hpp  main.cpp  mask_attack.cpp  mask_attack.hpp  modes.cpp  modes.hpp  opencl_setup.cpp  opencl_setup.hpp
src/hashes/: README.md  bitops.c  bitops.h  md5.c  md5.h
src/hashes/md5/: main.cpp  md5.c  md5.h
src/hashes/murmurhash3/: main.c  murmurhash3.c  murmurhash3.h
src/hashes/sha/: main.cpp  sha256.c  sha256.h
src/opencl/: bitops.cl  mask_generate.cl  mask_md5.cl  mask_sha256.cl  md5.cl  murmurhash3.cl  sha256.cl
